--- a/src/components/translations/translations_en.json
+++ b/src/components/translations/translations_en.json
@@ -70,20 +70,25 @@
   "najem": {
     "naslov": "STAND RENTAL",
     "podnaslov": "Select rental duration",
-    "trajanje": {
-      "one": "1 week",
-      "two": "2 weeks",
-      "three": "3 weeks",
-      "four": "1 month"
-    },
 
+    "trajanje": {
+      "1": "1 day",
+      "2": "2 days",
+      "3": "3 days",
+      "4": "4 days",
+      "5": "5 days",
+      "6": "6 days",
+      "7": "7 days"
+    },
     "tabela": {
       "stevilo_enot": "Number of units",
       "popust": "Discount",
       "dodatni_popust": "Additional discount",
-      "cena": "Unit price per week",
-      "skupna": "Total price"
+      "cena": "Price without discount",
+      "skupna": "Final price",
+      "dnevno": "Daily rental cost of one stand"
     },
+
     "enote": {
       "third": "3/SET 1",
       "fifth": "5/SET 2"
