--- a/src/components/translations/translations_si.json
+++ b/src/components/translations/translations_si.json
@@ -83,9 +83,9 @@
       "stevilo_enot": "Število enot",
       "popust": "Popust",
       "dodatni_popust": "Dodatni popust",
-      "cena": "Cena enote na teden",
-      "skupna": "Skupna cena",
-      "dnevno": "Dnevni strošek"
+      "cena": "Cena brez popusta",
+      "skupna": "Končna cena",
+      "dnevno": "Dnevni strošek najema enega stojala"
     },
     "enote": {
       "third": "3/KOMPLET 1",
